--- a/pom.xml
+++ b/pom.xml
@@ -72,10 +72,10 @@
             <launchers>
               <launcher>
                 <id>main</id>
-                <mainClass>com.ereisman.esurient.Main</mainClass>
+                <mainClass>com.ereisman.esurient.EsurientTool</mainClass>
                 <jvmArgs>
-                  <jvmArg>-Xms64m</jvmArg>
-                  <jvmArg>-Xmx1024m</jvmArg>
+                  <jvmArg>-Xms64M</jvmArg>
+                  <jvmArg>-Xmx1G</jvmArg>
                 </jvmArgs>
             </launcher>
           </launchers>
@@ -123,6 +123,12 @@
     </dependency>
 
     <dependency>
+      <groupId>io.backchat.jerkson</groupId>
+      <artifactId>jerkson_2.9.2</artifactId>
+      <version>0.7.0</version>
+    </dependency>
+
+    <dependency>
       <groupId>cascading</groupId>
       <artifactId>cascading-hadoop</artifactId>
       <version>2.2.0</version>
@@ -134,6 +140,7 @@
       <version>4.10</version>
       <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_2.9.3</artifactId>
