add some database management classes to src ; rearrage package structure for some hadoop and db classes ; change driver class in POM.xml

--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
             <launchers>
               <launcher>
                 <id>main</id>
-                <mainClass>com.ereisman.esurient.EsurientTool</mainClass>
+                <mainClass>com.ereisman.esurient.hadoop.EsurientTool</mainClass>
                 <jvmArgs>
                   <jvmArg>-Xms64M</jvmArg>
                   <jvmArg>-Xmx1G</jvmArg>
