--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,19 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.basedir>.</project.basedir>
+    <!-- Users can adjust the Scala version to taste if Esurient's dependencies are compatible -->
+    <scala.version>2.9.3</scala.version>
+    <!-- IMPORTANT: users must adjust the "hadoop.version" below to match your distribution and build
+         Esurient against that distribution before executing any Esurient jobs on your cluster  -->
+    <hadoop.version>2.0.0-mr1-cdh4.4.0</hadoop.version>
+    <!-- Leave this alone unless you customize the distro. May effect Esurient bin/ scripts if tampered with -->
+    <dist.name>esurient-dist</dist.name>
   </properties>
 
   <repositories>
     <repository>
-      <id>scala-tools.org</id>
-      <name>Scala-tools Maven2 Repository</name>
-      <url>http://scala-tools.org/repo-releases</url>
+      <id>sonatype-oss</id>
+      <url>http://oss.sonatype.org/content/repositories/releases/</url>
     </repository>
 
     <repository>
@@ -35,16 +41,15 @@
 
   <pluginRepositories>
     <pluginRepository>
-      <id>scala-tools.org</id>
-      <name>Scala-tools Maven2 Repository</name>
-      <url>http://scala-tools.org/repo-releases</url>
+      <id>sonatype-oss</id>
+      <url>http://oss.sonatype.org/content/repositories/releases/</url>
     </pluginRepository>
   </pluginRepositories>
 
   <build>
     <resources>
       <resource>
-        <directory>src/main/resources</directory>
+        <directory>${project.basedir}/src/main/resources</directory>
         <filtering>true</filtering>
       </resource>
     </resources>
@@ -54,12 +59,12 @@
       </testResource>
     </testResources>
 
-    <pluginManagement>
       <plugins>
-        <!-- Raise the default heap and thread stack sizes because scalac is a piece of crap --> 
+        <!-- Raise the default heap and thread stack sizes because scalac is a piece of crap -->
         <plugin>
           <groupId>org.scala-tools</groupId>
           <artifactId>maven-scala-plugin</artifactId>
+          <version>2.9.1</version>
           <executions>
             <execution>
               <goals>
@@ -86,73 +91,53 @@
             <artifactId>maven-assembly-plugin</artifactId>
             <version>2.4</version>
             <configuration>
-                <descriptorRefs>
-                    <descriptorRef>jar-with-dependencies</descriptorRef>
-                </descriptorRefs>
-            </configuration>
+              <tarLongFileMode>gnu</tarLongFileMode>    
+            </configuration>  
             <executions>
-                <execution>
-                    <id>assemble-all</id>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>single</goal>
-                    </goals>
-                </execution>
+              <execution>
+                <id>assemble-fatjar</id>
+                <configuration>
+                  <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                  </descriptorRefs>
+                </configuration>
+                <phase>package</phase>
+                <goals>
+                  <goal>single</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>assemble-tarball</id>
+                <configuration>
+                  <descriptors>
+                    <descriptor>src/main/assembly/tarball-assembly.xml</descriptor>
+                  </descriptors>
+                </configuration>
+                <phase>package</phase>
+                <goals>
+                  <goal>single</goal>
+                </goals>
+              </execution>
             </executions>
         </plugin>
       </plugins>
-    </pluginManagement>
   </build>
 
   <dependencies>
-    <dependency>
-      <groupId>org.scala-lang</groupId>
-      <artifactId>scala-library</artifactId>
-      <version>2.9.3</version>
-    </dependency>
-
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.6</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <version>9.3-1101-jdbc4</version>
-    </dependency>
-
+    <!-- Core Esurient dependencies -->
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-client</artifactId>
-      <version>2.0.0-mr1-cdh4.4.0</version>
+      <version>${hadoop.version}</version>
     </dependency>
 
     <dependency>
-      <groupId>cascading</groupId>
-      <artifactId>cascading-core</artifactId>
-      <version>2.2.0</version>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-library</artifactId>
+      <version>${scala.version}</version>
     </dependency>
 
-    <dependency>
-      <groupId>cascading</groupId>
-      <artifactId>cascading-platform</artifactId>
-      <version>2.2.0</version>
-    </dependency>
-
-    <dependency>
-      <groupId>io.backchat.jerkson</groupId>
-      <artifactId>jerkson_2.9.2</artifactId>
-      <version>0.7.0</version>
-    </dependency>
-
-    <dependency>
-      <groupId>cascading</groupId>
-      <artifactId>cascading-hadoop</artifactId>
-      <version>2.2.0</version>
-    </dependency>
-
+    <!-- Test dependencies. subject to change/still under construction -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -166,6 +151,48 @@
       <version>2.0.M5b</version>
       <scope>test</scope>
     </dependency>
- </dependencies>
+
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.6</version>
+      <optional>true</optional> <!-- remove this to include big driver jars in our fat jar -->
+    </dependency>
+
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>9.3-1101-jdbc4</version>
+      <optional>true</optional> <!-- remove this to include big driver jars in our fat jar -->
+    </dependency>
+
+    <dependency>
+      <groupId>io.backchat.jerkson</groupId>
+      <artifactId>jerkson_2.9.2</artifactId>
+      <version>0.7.0</version>
+      <optional>true</optional> <!-- remove this to include JSON deps in our fat jar -->
+    </dependency>
+
+    <!-- Users might want to bring in deps from any additional Hadoop processing frameworks they use -->
+<!--
+    <dependency>
+      <groupId>cascading</groupId>
+      <artifactId>cascading-core</artifactId>
+      <version>2.2.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>cascading</groupId>
+      <artifactId>cascading-platform</artifactId>
+      <version>2.2.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>cascading</groupId>
+      <artifactId>cascading-hadoop</artifactId>
+      <version>2.2.0</version>
+    </dependency>
+-->
+  </dependencies>
 
 </project>
