--- a/esurient-example-job.properties
+++ b/esurient-example-job.properties
@@ -1,5 +1,5 @@
 esurient.job.name=Partitioned Esurient Example Job
-esurient.task.class=com.ereisman.esurient.examples.EsurientPartitionedTask
+esurient.task.class.name=com.ereisman.esurient.examples.EsurientPartitionedTask
 esurient.task.count=24
 esurient.user.job.arg.1=47
 esurient.user.job.arg.2=Happy Hadooping
