make sure the example job properties file includes an example setting Hadoop level/JVM props for the job run, make sure the example props set reasonable values

--- a/esurient-example-job.properties
+++ b/esurient-example-job.properties
@@ -4,4 +4,4 @@ esurient.task.count=24
 esurient.user.job.arg.1=47
 esurient.user.job.arg.2=Happy Hadooping
 can.be.called.anything=true
-mapred.child.java.opts=-Xmx2G
+mapred.child.java.opts=-Xmx128M
